# openarm_can

./: .gitignore  .gitmodules  .packit.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  Rakefile  helper.rb  package.xml
.github/workflows/: package.yaml  release.yaml  test.yaml
control_sequences/: one_motor_current.cpp  periodic.cpp  ramp.cpp  run_batch.py  step.cpp  trapezoid.cpp
control_sequences/inputs/: motor1.in  motor2.in  motor3.in  motor4.in  motor5.in  motor6.in  motor7.in  test.in
control_sequences/inputs/periodic/: test.in
control_sequences/inputs/ramp/: motor7.csv  test.in
control_sequences/inputs/step/: motor7.csv  test.in
control_sequences/inputs/trap/: motor1.in  motor2.in  motor3.in  motor4.in  motor5.in
dev/: README.md
include/openarm/can/socket/: arm_component.hpp  gripper_component.hpp  openarm.hpp  openarm_group.hpp
include/openarm/damiao_motor/: dm_motor.hpp  dm_motor_control.hpp  dm_motor_device_collection.hpp
include/sysid/signal/: factory.hpp
include/sysid/utils/: logger.hpp  parser.hpp
python/: CMakeLists.txt  README.md  pyproject.toml  setup.py
python/examples/: test_gripper_posforce.py  test_mit.py  test_openarm_group.py  test_posforce.py  test_vel.py
python/openarm_can/: __init__.py  __init__.pyi  openarm_can.pyi
python/src/: openarm_can.cpp
rust/: Cargo.toml  pyproject.toml
rust/crates/openarm/: Cargo.toml
rust/crates/openarm-python/: Cargo.toml
rust/crates/openarm-python/src/: canbus.rs  components.rs  damiao_motor.rs  error.rs  lib.rs
rust/crates/openarm/examples/: remote_control.rs
rust/crates/openarm/src/: error.rs  lib.rs
rust/crates/openarm/src/canbus/: device.rs  device_collection.rs  mod.rs  socket.rs
rust/crates/openarm/src/components/: arm.rs  gripper.rs  mod.rs  openarm.rs
rust/crates/openarm/src/damiao_motor/: constants.rs  control.rs  device.rs  device_collection.rs  mod.rs  motor.rs
rust/examples/: example.py  move_test.py
rust/python/openarm_can/: __init__.py
rust/src/: lib.rs
rust/src/canbus/: device.rs  device_collection.rs  mod.rs  socket.rs
rust/src/components/: arm.rs  gripper.rs  mod.rs  openarm.rs
rust/src/damiao_motor/: constants.rs  control.rs  device_collection.rs  motor.rs
rust/tests/: test_compliance.py  test_hardware.py
setup/: configure_socketcan_4_arms.sh  motor_check.cpp  motor_sampling_check.cpp  openarm-can-cli.bash  openarm-can-configure-socketcan  openarm-can-configure-socketcan-flexible  openarm-can-set-zero  openarm-can-zero-position-calibration  openarm-change-baudrate  openarm_can_diagnosis.cpp  zero_position_calibration.py
setup/cli/: cli.hpp  openarm_cli.cpp
setup/cli/commands/: can_configure_commands.cpp  change_motor_baudrate_commands.cpp  change_motor_id_commands.cpp  clear_error_commands.cpp  discover_motor_commands.cpp  monitor_motor_status_commands.cpp  motor_read_param_commands.cpp  motor_statas_commands.cpp  write_motor_param_commands.cpp  zero_position_commands.cpp
src/openarm/can/socket/: gripper_component.cpp  openarm.cpp  openarm_group.cpp
src/openarm/damiao_motor/: dm_motor.cpp  dm_motor_control.cpp  dm_motor_device.cpp  dm_motor_device_collection.cpp
src/sysid/signal/: factory.cpp
src/sysid/utils/: logger.cpp  parser.cpp
test/: posforce_command_test.cpp
