[workspace]
resolver = "2"
members = [
    "crates/openarm",
    "crates/openarm-python",
]

[workspace.package]
version = "1.2.5"
edition = "2021"
authors = ["OpenArm Contributors"]
license = "MIT"

[workspace.dependencies]
openarm = { path = "crates/openarm" }
pyo3 = { version = "0.23", features = ["extension-module"] }
socketcan = "3.5"
libc = "0.2"
thiserror = "2.0"
xoq = { path = "../../../wser", features = ["can", "iroh"] }
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
