[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openarm_can"
version = "1.2.5"
description = "Pure Rust implementation of OpenArm CAN motor control"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
]

[tool.maturin]
manifest-path = "crates/openarm-python/Cargo.toml"
python-source = "python"
module-name = "openarm_can"
