[package]
name = "openarm"
description = "Pure Rust implementation of OpenArm CAN motor control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
remote = ["xoq", "anyhow"]

[dependencies]
socketcan = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }
xoq = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
